Make Last.fm streams work. Their URLs can only be opened once, after that they return with forbidden. However the MO likes to reset the pipeline a lot and thus opens the connection twice -> fail. Worked around it by explicitly preventing last.fm URLs to be reset.

More appropriate fix (removal of the resetting logic) coming with 4.5

BUG: 252649